# openni2-cv-wrapper

./: .gitignore  CMakeLists.txt  main.cpp  openni2_cv_grabber.cpp  openni2_cv_grabber.h
